--- a/sass/main.scss
+++ b/sass/main.scss
@@ -146,12 +146,6 @@ nav {
 		vertical-align: top;
 	}
 
-	.box-large {
-		height: 100%;
-		width: 24.5%;
-		background-color: $color-grey;
-	}
-
 	.box-container {
 		height: 100%;
 		width: 24.5%;
@@ -171,6 +165,12 @@ nav {
 		display: block;
 	}
 
+		.box-large {
+		height: 100%;
+		width: 24.5%;
+		background-color: $color-grey;
+	}
+
 	.small-top {
 		margin-bottom: 5px;
 	}
@@ -181,6 +181,60 @@ nav {
 }
 
 
+.home_banner {
+	background-color: $color-blue;
+	text-align: center;
+	padding: 20px 0;
+	position: relative;
+
+	img {
+		width: 90px;
+		height: 70px;
+		display: block;
+		margin: 0 auto;
+		text-align: center;
+	}
+
+	.jacket {
+		width: 100px;
+	}
+
+	.cup {
+		width: 80px;
+	}
+
+	h2 {
+		color: white;
+		margin-top: 40px;
+	}
+}
+
+.home_gallery {
+	padding: 40px 0;
+	background: url('../images/texture.png') repeat;
+		.container {
+			> div {
+				display: inline-block;
+				background-color: $color-grey;
+				height: 100%;
+				height: 500px;
+			}
+
+			.box-large {
+				width: 24.5%;
+				margin-right: 1.51515%;
+			}
+
+			.box-large:last-child {
+				margin-right: 0;
+				margin-left: 1.51515%;
+			}
+
+			.box-xl {
+				width: 47.25%;
+			}
+		}
+}
 
 /*!////////////////////////////////////////////////
 // STATES
