--- a/css/main.css
+++ b/css/main.css
@@ -344,6 +344,11 @@ a {
   -moz-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out; }
 
+svg {
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
+
 .center {
   text-align: center; }
 
@@ -374,17 +379,18 @@ p {
 
 .header {
   background: url("../images/wood-bg.jpg") no-repeat;
+  background-attachment: fixed;
   background-size: cover; }
 
 .logo {
   text-align: center;
   position: relative; }
   .logo img {
-    width: 30%;
-    margin: 120px 0; }
+    width: 30%; }
 
 nav {
-  padding-top: 20px; }
+  padding-top: 20px;
+  margin-bottom: 120px; }
   nav a {
     color: #e3e0da;
     font-family: "Patua One", cursive;
@@ -393,16 +399,36 @@ nav {
     margin-right: 20px;
     position: relative;
     border-bottom: 2px solid transparent; }
+  nav a:after {
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    content: "";
+    width: 80%;
+    margin-left: 10%;
+    height: 4px;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
   nav a:hover {
-    color: #5f99aa;
-    border-bottom: 2px solid #5f99aa; }
+    color: #99cc33;
+    border-bottom: 2px solid #e3e0da; }
+  nav a:hover:after {
+    background-color: #e3e0da; }
   nav span {
     float: right; }
 
 .brands {
-  text-align: center; }
-  .brands .grid-1 {
-    text-align: center; }
+  margin-top: 120px; }
+  .brands .grid-logo {
+    display: inline-block;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-bottom: 40px;
+    height: 60px;
+    position: relative; }
+  .brands .grid-logo:last-child {
+    margin: 0; }
 
 .home_page-content p {
   width: 50%;
@@ -418,6 +444,8 @@ nav {
   height: 600px;
   width: 100%;
   overflow: hidden; }
+  .home_product-grid img {
+    width: 100%; }
   @media screen and (max-width: 1280px) {
     .home_product-grid {
       height: 500px; } }
@@ -430,17 +458,17 @@ nav {
   .home_product-grid .box-medium {
     height: 70%;
     width: 100%;
-    background-color: #c4c1ba;
-    display: block; }
+    display: block;
+    overflow: hidden; }
   .home_product-grid .box-small {
     height: 30%;
     width: 100%;
-    background-color: #c4c1ba;
-    display: block; }
+    display: block;
+    overflow: hidden; }
   .home_product-grid .box-large {
     height: 100%;
     width: 24.5%;
-    background-color: #c4c1ba; }
+    overflow: hidden; }
   .home_product-grid .small-top {
     margin-bottom: 5px; }
   .home_product-grid .small-bottom {
@@ -449,42 +477,308 @@ nav {
 .home_banner {
   background-color: #5f99aa;
   text-align: center;
-  padding: 20px 0;
+  padding: 30px 0 20px;
   position: relative; }
-  .home_banner img {
+  .home_banner svg.jacket {
+    width: 100px; }
+  .home_banner svg.cup {
+    width: 80px; }
+  .home_banner svg {
     width: 90px;
     height: 70px;
     display: block;
     margin: 0 auto;
     text-align: center; }
-  .home_banner .jacket {
-    width: 100px; }
-  .home_banner .cup {
-    width: 80px; }
   .home_banner h2 {
     color: white;
-    margin-top: 40px; }
+    margin-top: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-bottom: 2px solid #e3e0da;
+    position: relative;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+  .home_banner h2:after {
+    position: absolute;
+    bottom: -12px;
+    left: 0;
+    content: "";
+    width: 80%;
+    margin-left: 10%;
+    height: 4px;
+    background-color: #e3e0da;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+  .home_banner a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0; }
+  .home_banner .grid-25 div {
+    position: relative;
+    display: inline-block;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+  .home_banner .grid-25 div:hover svg {
+    stroke: #99cc33;
+    stroke-width: 20px; }
+  .home_banner .grid-25 div:hover h2 {
+    color: #99cc33;
+    border-bottom: 2px solid #99cc33; }
+  .home_banner .grid-25 div:hover h2:after {
+    background-color: #99cc33; }
 
 .home_gallery {
   padding: 40px 0;
   background: url("../images/texture.png") repeat; }
   .home_gallery .container > div {
     display: inline-block;
-    background-color: #c4c1ba;
+    overflow: hidden;
     height: 100%;
     height: 500px; }
   .home_gallery .container .box-large {
     width: 24.5%;
-    margin-right: 1.51515%; }
+    margin-right: 1.151515%; }
   .home_gallery .container .box-large:last-child {
     margin-right: 0;
     margin-left: 1.51515%; }
   .home_gallery .container .box-xl {
     width: 47.25%; }
 
+.cycler {
+  position: relative; }
+
+.cycler img {
+  position: absolute;
+  z-index: 1; }
+
+.cycler img.active {
+  z-index: 3; }
+
+.cycler2 {
+  position: relative; }
+
+.cycler2 img {
+  position: absolute;
+  z-index: 1; }
+
+.cycler2 img.active2 {
+  z-index: 3; }
+
+.cycler3 {
+  position: relative; }
+
+.cycler3 img {
+  position: absolute;
+  z-index: 1; }
+
+.cycler3 img.active3 {
+  z-index: 3; }
+
+footer {
+  background: url("../images/wood-bg.jpg") no-repeat;
+  background-size: cover;
+  color: #e3e0da;
+  padding-top: 80px; }
+  footer nav {
+    padding-top: 0; }
+    footer nav a {
+      font-size: 1.125em; }
+  footer span {
+    width: 100%;
+    display: block;
+    text-align: right;
+    margin-bottom: 80px; }
+  footer span:last-child {
+    margin-bottom: 0; }
+
+/*!////////////////////////////////////////////////
+// Side Bar / Main Content
+/////////////////////////////////////////////////*/
+.grid-content.no-margin {
+  width: 75%;
+  text-align: center;
+  padding-right: 20px; }
+
+.sub-header {
+  padding-bottom: 40px; }
+
+.sub-page {
+  margin-top: 0;
+  margin-bottom: 20px; }
+  .sub-page h1 {
+    margin-top: -60px; }
+
+.side-bar div {
+  margin-bottom: 60px; }
+.side-bar div {
+  border: 2px solid #c4c1ba;
+  padding: 20px 40px; }
+.side-bar div:first-child {
+  padding: 0;
+  border: none; }
+.side-bar div:last-child {
+  padding: 0;
+  border: none;
+  text-align: center; }
+.side-bar ul li:first-child {
+  list-style-type: none;
+  text-align: center;
+  font-family: "Patua One", cursive;
+  font-size: 1.5em;
+  margin-bottom: 40px;
+  color: #5f99aa; }
+.side-bar ul li {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.125em;
+  color: #99cc33;
+  margin-bottom: 10px; }
+  .side-bar ul li a {
+    color: #5f99aa; }
+  .side-bar ul li a:hover {
+    color: #99cc33; }
+.side-bar p {
+  color: #5f99aa;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.125em; }
+  .side-bar p span {
+    font-family: "Patua One", cursive;
+    font-size: 24px; }
+
+.sub-a {
+  color: white;
+  padding: 10px 20px;
+  background-color: #5f99aa;
+  display: inline-block;
+  font-family: "Patua One", cursive;
+  font-size: 1.5em;
+  margin-bottom: 20px; }
+
+.sub-a:hover {
+  background-color: #99cc33; }
+
+.sub-a:last-child {
+  margin-bottom: 0; }
+
+.product-wrapper {
+  width: 30%;
+  height: 391px;
+  background-color: grey;
+  display: inline-block;
+  margin-right: 1.51515%;
+  margin-bottom: 3%; }
+
+.row div:last-child {
+  margin-right: 0; }
+
 /*!////////////////////////////////////////////////
 // STATES
 /////////////////////////////////////////////////*/
+footer nav {
+  margin-bottom: 60px; }
+footer svg {
+  width: 30px;
+  height: auto;
+  fill: #e3e0da;
+  margin-right: 20px; }
+footer svg:hover {
+  fill: #99cc33; }
+
+.border-1:after {
+  position: absolute;
+  top: -50px;
+  left: 0;
+  content: "";
+  width: 45%;
+  margin-left: 27.5%;
+  height: 6px;
+  background-color: #c4c1ba; }
+
+.border-1:before {
+  position: absolute;
+  bottom: -48px;
+  left: 0;
+  content: "";
+  width: 45%;
+  margin-left: 27.5%;
+  height: 6px;
+  background-color: #c4c1ba; }
+
+.border-2:after {
+  position: absolute;
+  top: -30px;
+  left: 0;
+  content: "";
+  width: 52%;
+  margin-left: 24%;
+  height: 2px;
+  background-color: #c4c1ba; }
+
+.border-2:before {
+  position: absolute;
+  bottom: -30px;
+  left: 0;
+  content: "";
+  width: 52%;
+  margin-left: 24%;
+  height: 2px;
+  background-color: #c4c1ba; }
+
+.grid {
+  padding: 0; }
+  .grid figure {
+    margin: 0;
+    min-width: 0;
+    max-width: 100%;
+    width: 100%;
+    height: 600px;
+    max-height: 600px; }
+    @media screen and (max-width: 1280px) {
+      .grid figure {
+        height: 500px;
+        max-height: 500px; } }
+    .grid figure p {
+      width: 100%; }
+    .grid figure h2 {
+      font-family: "Patua One", cursive;
+      font-weight: normal; }
+    .grid figure img {
+      height: auto;
+      position: relative;
+      display: block;
+      opacity: 1;
+      min-height: auto;
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0); }
+
+.box-container .box-small figcaption {
+  padding: 0; }
+.box-container .box-small figure {
+  height: 180px; }
+  @media screen and (max-width: 1280px) {
+    .box-container .box-small figure {
+      height: 150px; } }
+@media screen and (max-width: 1280px) {
+  .box-container .box-small p {
+    padding-top: 10px; } }
+.box-container .box-small figcaption::before {
+  top: 20px; }
+.box-container .box-small figcaption::before {
+  bottom: 20px; }
+.box-container .box-small h2 {
+  padding-top: 10%; }
+.box-container .box-medium figcaption {
+  padding: 1em; }
+.box-container .box-medium figure {
+  height: 418px; }
+  @media screen and (max-width: 1280px) {
+    .box-container .box-medium figure {
+      height: 345px; } }
+
 /*! ==========================================================================
 // Media Queries
 // =========================================================================*/
