--- a/sass/main.scss
+++ b/sass/main.scss
@@ -36,6 +36,10 @@ a {
 	@include transition(all 0.3s ease-in-out);
 }
 
+svg {
+	@include transition(all 0.3s ease-in-out);
+}
+
 .center {
 	text-align: center;
 }
@@ -71,6 +75,7 @@ p {
 
 .header {
 	background: url('../images/wood-bg.jpg') no-repeat;
+	background-attachment: fixed;
 	background-size: cover;
 }
 
@@ -78,15 +83,16 @@ p {
 	text-align: center;
 	position: relative;
 
+
 	img {
 		width: 30%;
-		margin: 120px 0;
 	}
 }
 
 
 nav {
 	padding-top: 20px;
+	margin-bottom: 120px;
 	a {
 		color: $color-light-grey;
 		font-family: $font-header;
@@ -97,9 +103,24 @@ nav {
 		border-bottom: 2px solid transparent;
 	}
 
+	a:after {
+		position: absolute;
+		bottom: -10px;
+		left: 0;
+		content: "";
+		width: 80%;
+		margin-left: 10%;
+		height: 4px;
+		@include transition(all 0.3s ease-in-out);
+	}
+
 	a:hover {
-		color: $color-blue;
-		border-bottom: 2px solid $color-blue;
+		color: $color-green;
+		border-bottom: 2px solid $color-light-grey;
+	}
+
+	a:hover:after {
+		background-color: $color-light-grey;
 	}
 
 	span {
@@ -109,13 +130,22 @@ nav {
 }
 
 	.brands {
-		text-align: center;
+		margin-top: 120px;
 
-		.grid-1 {
-			text-align: center;
-		}
 
+.grid-logo {
+	display: inline-block;
+	margin-left: 2%;
+	margin-right: 2%;
+	margin-bottom: 40px;
+	height: 60px;
+	position: relative;
+}
+
+.grid-logo:last-child {
+	margin: 0;
 	}
+}
 
 .home_page-content {
 	p {
@@ -137,6 +167,10 @@ nav {
 	width: 100%;
 	overflow: hidden;
 
+	img {
+		width: 100%;
+	}
+
 	@media screen and (max-width: 1280px) {
 		height: 500px;
 	}
@@ -154,21 +188,21 @@ nav {
 	.box-medium {
 		height: 70%;
 		width: 100%;
-		background-color:$color-grey;
 		display: block;
+				overflow: hidden;
 	}
 
 	.box-small {
 		height: 30%;
 		width:100%;
-		background-color: $color-grey; 
 		display: block;
+				overflow: hidden;
 	}
 
 		.box-large {
 		height: 100%;
 		width: 24.5%;
-		background-color: $color-grey;
+				overflow: hidden;
 	}
 
 	.small-top {
@@ -184,10 +218,18 @@ nav {
 .home_banner {
 	background-color: $color-blue;
 	text-align: center;
-	padding: 20px 0;
+	padding: 30px 0 20px;
 	position: relative;
 
-	img {
+	svg.jacket {
+		width: 100px;
+	}
+
+	svg.cup {
+		width: 80px;
+	}
+
+		svg {
 		width: 90px;
 		height: 70px;
 		display: block;
@@ -195,17 +237,59 @@ nav {
 		text-align: center;
 	}
 
-	.jacket {
-		width: 100px;
-	}
-
-	.cup {
-		width: 80px;
-	}
-
 	h2 {
 		color: white;
 		margin-top: 40px;
+		padding-left: 10px;
+		padding-right: 10px;
+		border-bottom: 2px solid $color-light-grey;
+		position: relative;
+			@include transition(all 0.3s ease-in-out);
+	}
+
+	h2:after {
+		position: absolute;
+		bottom: -12px;
+		left: 0;
+		content: "";
+		width: 80%;
+		margin-left: 10%;
+		height: 4px;
+		background-color: $color-light-grey;
+		@include transition(all 0.3s ease-in-out);
+	}
+
+	a {
+		display: block;
+width: 100%;
+height: 100%;
+position: absolute;
+top: 0;
+	}
+
+	.grid-25 {
+		div {
+		position: relative;
+		display: inline-block;
+		@include transition(all 0.3s ease-in-out);
+		}
+
+		div:hover {
+
+			svg {
+				stroke: $color-green;
+stroke-width: 20px;
+			}
+
+			h2 {
+				color: $color-green;
+				border-bottom: 2px solid $color-green;
+			}
+
+			h2:after {
+				background-color: $color-green;
+			}
+		}
 	}
 }
 
@@ -215,14 +299,14 @@ nav {
 		.container {
 			> div {
 				display: inline-block;
-				background-color: $color-grey;
+				overflow: hidden;
 				height: 100%;
 				height: 500px;
 			}
 
 			.box-large {
 				width: 24.5%;
-				margin-right: 1.51515%;
+				margin-right: 1.151515%;
 			}
 
 			.box-large:last-child {
@@ -236,10 +320,216 @@ nav {
 		}
 }
 
+.cycler{position:relative;}
+.cycler img{position:absolute;z-index:1}
+.cycler img.active{z-index:3}
+
+.cycler2{position:relative;}
+.cycler2 img{position:absolute;z-index:1}
+.cycler2 img.active2{z-index:3}
+
+.cycler3{position:relative;}
+.cycler3 img{position:absolute;z-index:1}
+.cycler3 img.active3{z-index:3}
+
+footer {
+	background: url('../images/wood-bg.jpg') no-repeat;
+	background-size: cover;
+	color: $color-light-grey;
+	padding-top: $section-padding;
+
+	nav {
+		padding-top: 0;
+		a {
+			font-size: em(18px);
+		}
+	}
+
+	span {
+		width: 100%;
+		display: block;
+		text-align: right;
+		margin-bottom: $section-margin;
+	}
+
+	span:last-child {
+		margin-bottom: 0;
+	}
+}
+
+/*!////////////////////////////////////////////////
+// Side Bar / Main Content
+/////////////////////////////////////////////////*/
+.grid-content.no-margin {
+	width: 75%;
+	text-align: center;
+	padding-right: 20px;
+}
+.sub-header {
+	padding-bottom: 40px;
+}
+
+.sub-page {
+	margin-top: 0;
+		margin-bottom: 20px;
+
+	h1 {
+		margin-top: -60px;
+	}
+}
+
+.side-bar {
+	div {
+		margin-bottom: 60px;
+	}
+
+	div {
+		border: 2px solid $color-grey;
+		padding: 20px 40px;
+	}
+
+	div:first-child {
+		padding: 0;
+		border: none;
+	}
+
+	div:last-child {
+		padding: 0;
+		border: none;
+		text-align: center;
+	}
+
+	ul {
+		li:first-child {
+			list-style-type: none;
+			text-align: center;
+			font-family: $font-header;
+			font-size: em(24);
+			margin-bottom: 40px;
+			color: $color-blue;
+		}
+
+		li {
+			font-family: $font-body;
+			font-size: em(18);
+			color: $color-green;
+			margin-bottom: 10px;
+
+			a {
+				color: $color-blue;
+			}
+
+			a:hover {
+				color: $color-green;
+			}
+		}
+	}
+
+	p {
+		color: $color-blue;
+		font-family: $font-body;
+		font-size: em(18);
+		span {
+			font-family: $font-header;
+			font-size: 24px;
+		}
+	}
+}
+
+.sub-a {
+	color: white;
+	padding: 10px 20px;
+	background-color: $color-blue;
+	display: inline-block;
+	font-family: $font-header;
+	font-size: em(24);
+	margin-bottom: 20px;
+}
+
+.sub-a:hover {
+	background-color: $color-green;
+}
+
+.sub-a:last-child {
+	margin-bottom: 0;
+}
+
+.product-wrapper {
+	width: 30%;
+	height: 391px;
+	background-color: grey;
+	display: inline-block;
+	margin-right: 1.51515%;
+	margin-bottom: 3%;
+}
+
+.row {
+	div:last-child {
+		margin-right: 0;
+	}
+}
+
 /*!////////////////////////////////////////////////
 // STATES
 /////////////////////////////////////////////////*/
+footer {
+	nav {
+		margin-bottom: 60px;
+	}
+	svg {
+		width: 30px;
+		height: auto;
+		fill:$color-light-grey;
+		margin-right: 20px;
+	}
 
+	svg:hover {
+		fill:$color-green;
+	}
+}
+.border-1:after {
+		position: absolute;
+		top: -50px;
+		left: 0;
+		content: "";
+		width: 45%;
+		margin-left: 27.5%;
+		height: 6px;
+		background-color: $color-grey;
+	}
 
+.border-1:before {
+		position: absolute;
+		bottom: -48px;
+		left: 0;
+		content: "";
+		width: 45%;
+		margin-left: 27.5%;
+		height: 6px;
+		background-color: $color-grey;
+	}
 
+.border-2:after {
+		position: absolute;
+		top: -30px;
+		left: 0;
+		content: "";
+		width: 52%;
+		margin-left: 24%;
+		height: 2px;
+		background-color: $color-grey;
+	}
+
+.border-2:before {
+		position: absolute;
+		bottom: -30px;
+		left: 0;
+		content: "";
+		width: 52%;
+		margin-left: 24%;
+		height: 2px;
+		background-color: $color-grey;
+	}
+
+@import "hover-fix.scss";
 @import "helpers.scss";
