--- a/css/main.css
+++ b/css/main.css
@@ -387,6 +387,9 @@ p {
   position: relative; }
   .logo img {
     width: 30%; }
+    @media screen and (max-width: 878px) {
+      .logo img {
+        width: 35%; } }
 
 nav {
   padding-top: 20px;
@@ -418,17 +421,82 @@ nav {
   nav span {
     float: right; }
 
+.active-link {
+  color: #99cc33;
+  border-bottom: 2px solid #e3e0da; }
+
+.active-link:after {
+  background-color: #e3e0da; }
+
 .brands {
   margin-top: 120px; }
-  .brands .grid-logo {
-    display: inline-block;
-    margin-left: 2%;
-    margin-right: 2%;
-    margin-bottom: 40px;
-    height: 60px;
-    position: relative; }
-  .brands .grid-logo:last-child {
-    margin: 0; }
+  @media screen and (max-width: 980px) {
+    .brands {
+      text-align: center; } }
+
+.lazy {
+  background-image: url(../images/logos/lazy-one-logo.png);
+  width: 10%; }
+
+.good {
+  background-image: url(../images/logos/good-vibes-logo.png);
+  width: 15%; }
+
+.natural {
+  background-image: url(../images/logos/natural-life-logo.png);
+  width: 22%; }
+
+.old {
+  background-image: url(../images/logos/old-guys-rule-logo.png);
+  width: 20%; }
+
+.laid {
+  background-image: url(../images/logos/laid-back-logo.png);
+  width: 15%; }
+
+.grid-logo {
+  display: inline-block;
+  margin-left: 2.05%;
+  margin-right: 2.05%;
+  margin-bottom: 40px;
+  height: 85px;
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-bottom: 2px solid #e3e0da;
+  position: relative; }
+  @media screen and (max-width: 1277px) {
+    .grid-logo {
+      background-size: 100% auto;
+      margin-left: 2%;
+      margin-right: 2%; } }
+  @media screen and (max-width: 980px) {
+    .grid-logo {
+      margin-left: 1%;
+      margin-right: 1%; } }
+  .grid-logo a {
+    display: block;
+    width: 100%;
+    height: 100%; }
+
+.grid-logo:last-child {
+  margin-right: 0; }
+
+.grid-logo:first-child {
+  margin-left: 0; }
+
+.grid-logo:after {
+  position: absolute;
+  bottom: -12px;
+  left: 0;
+  content: "";
+  width: 80%;
+  margin-left: 10%;
+  height: 4px;
+  background-color: #e3e0da;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
 
 .home_page-content p {
   width: 50%;
@@ -613,41 +681,76 @@ footer {
   .sub-page h1 {
     margin-top: -60px; }
 
-.side-bar div {
-  margin-bottom: 60px; }
-.side-bar div {
-  border: 2px solid #c4c1ba;
-  padding: 20px 40px; }
-.side-bar div:first-child {
-  padding: 0;
-  border: none; }
-.side-bar div:last-child {
-  padding: 0;
-  border: none;
-  text-align: center; }
-.side-bar ul li:first-child {
-  list-style-type: none;
-  text-align: center;
-  font-family: "Patua One", cursive;
-  font-size: 1.5em;
-  margin-bottom: 40px;
-  color: #5f99aa; }
-.side-bar ul li {
-  font-family: "Roboto", sans-serif;
-  font-size: 1.125em;
-  color: #99cc33;
-  margin-bottom: 10px; }
-  .side-bar ul li a {
-    color: #5f99aa; }
-  .side-bar ul li a:hover {
-    color: #99cc33; }
-.side-bar p {
-  color: #5f99aa;
-  font-family: "Roboto", sans-serif;
-  font-size: 1.125em; }
-  .side-bar p span {
+.side-bar {
+  padding-right: 20px; }
+  .side-bar div {
+    margin-bottom: 60px; }
+  .side-bar div {
+    border: 2px solid #c4c1ba;
+    padding: 20px 32px; }
+  .side-bar div:first-child {
+    padding: 0;
+    border: none; }
+  .side-bar div:last-child {
+    padding: 0;
+    border: none;
+    text-align: center;
+    border-bottom: 2px solid #c4c1ba;
+    padding-bottom: 5px;
+    position: relative; }
+    .side-bar div:last-child p {
+      margin-bottom: 0; }
+  .side-bar div:last-child:after {
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    content: "";
+    width: 80%;
+    margin-left: 10%;
+    height: 4px;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #c4c1ba; }
+  .side-bar ul li:first-child {
+    list-style-type: none;
+    text-align: center;
     font-family: "Patua One", cursive;
-    font-size: 24px; }
+    font-size: 1.5em;
+    margin-bottom: 40px;
+    color: #5f99aa;
+    border-bottom: 2px solid #c4c1ba;
+    padding-bottom: 5px;
+    position: relative; }
+  .side-bar ul li {
+    font-family: "Roboto", sans-serif;
+    font-size: 1.125em;
+    color: #99cc33;
+    margin-bottom: 10px; }
+    .side-bar ul li a {
+      color: #5f99aa; }
+    .side-bar ul li a:hover {
+      color: #99cc33; }
+  .side-bar p {
+    color: #5f99aa;
+    font-family: "Roboto", sans-serif;
+    font-size: 1.125em; }
+    .side-bar p span {
+      font-family: "Patua One", cursive;
+      font-size: 24px; }
+
+li:first-child:after {
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  content: "";
+  width: 80%;
+  margin-left: 10%;
+  height: 4px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #c4c1ba; }
 
 .sub-a {
   color: white;
@@ -693,8 +796,8 @@ footer svg:hover {
   top: -50px;
   left: 0;
   content: "";
-  width: 45%;
-  margin-left: 27.5%;
+  width: 35%;
+  margin-left: 32.5%;
   height: 6px;
   background-color: #c4c1ba; }
 
@@ -703,8 +806,8 @@ footer svg:hover {
   bottom: -48px;
   left: 0;
   content: "";
-  width: 45%;
-  margin-left: 27.5%;
+  width: 35%;
+  margin-left: 32.5%;
   height: 6px;
   background-color: #c4c1ba; }
 
@@ -713,8 +816,8 @@ footer svg:hover {
   top: -30px;
   left: 0;
   content: "";
-  width: 52%;
-  margin-left: 24%;
+  width: 40%;
+  margin-left: 30%;
   height: 2px;
   background-color: #c4c1ba; }
 
@@ -723,8 +826,8 @@ footer svg:hover {
   bottom: -30px;
   left: 0;
   content: "";
-  width: 52%;
-  margin-left: 24%;
+  width: 40%;
+  margin-left: 30%;
   height: 2px;
   background-color: #c4c1ba; }
 
