--- a/sass/main.scss
+++ b/sass/main.scss
@@ -86,6 +86,10 @@ p {
 
 	img {
 		width: 30%;
+
+		@media screen and (max-width: 878px) {
+			width: 35%;
+		}
 	}
 }
 
@@ -129,23 +133,102 @@ nav {
 
 }
 
+.active-link {
+	color: $color-green;
+	border-bottom: 2px solid $color-light-grey;
+}
+
+.active-link:after {
+	background-color: $color-light-grey;
+}
+
 	.brands {
 		margin-top: 120px;
 
+		@media screen and (max-width: 980px) {
+			text-align: center;
+		}
+}
+
+	.lazy {
+		background-image: url(../images/logos/lazy-one-logo.png);
+		width: 10%;
+	
+	}
+
+	.good {
+		background-image: url(../images/logos/good-vibes-logo.png);
+		width: 15%;
+
+	}
+
+	.natural {
+		background-image: url(../images/logos/natural-life-logo.png);
+		width: 22%;
+
+	}
+
+	.old {
+		background-image: url(../images/logos/old-guys-rule-logo.png);
+		width: 20%;
+
+	}
+
+	.laid {
+		background-image: url(../images/logos/laid-back-logo.png);
+		width: 15%;
+	}
 
 .grid-logo {
 	display: inline-block;
-	margin-left: 2%;
-	margin-right: 2%;
+	margin-left: 2.05%;
+	margin-right: 2.05%;
 	margin-bottom: 40px;
-	height: 60px;
+	height: 85px;
 	position: relative;
+	background-position: center;
+	background-repeat: no-repeat;
+	border-bottom: 2px solid $color-light-grey; 
+	position: relative;
+
+	@media screen and (max-width: 1277px) {
+		background-size: 100% auto;
+		margin-left: 2%;
+		margin-right: 2%;
+	}
+
+	@media screen and (max-width: 980px) {
+		margin-left: 1%;
+		margin-right: 1%;
+	}
+
+	a {
+		display: block;
+		width: 100%;
+		height: 100%;
+	}
 }
 
 .grid-logo:last-child {
-	margin: 0;
-	}
+	margin-right: 0;
 }
+
+.grid-logo:first-child  {
+	margin-left: 0;
+}
+
+.grid-logo:after {
+		position: absolute;
+		bottom: -12px;
+		left: 0;
+		content: "";
+		width: 80%;
+		margin-left: 10%;
+		height: 4px;
+		background-color: $color-light-grey;
+		@include transition(all 0.3s ease-in-out);
+	}
+
 
 .home_page-content {
 	p {
@@ -379,13 +462,14 @@ footer {
 }
 
 .side-bar {
+	padding-right: 20px;
 	div {
 		margin-bottom: 60px;
 	}
 
 	div {
 		border: 2px solid $color-grey;
-		padding: 20px 40px;
+		padding: 20px 32px;
 	}
 
 	div:first-child {
@@ -397,7 +481,25 @@ footer {
 		padding: 0;
 		border: none;
 		text-align: center;
+		border-bottom: 2px solid $color-grey;
+padding-bottom: 5px;
+position: relative;
+		p {
+			margin-bottom: 0;
+		}
 	}
+
+	div:last-child:after {
+			position: absolute;
+		bottom: -10px;
+		left: 0;
+		content: "";
+		width: 80%;
+		margin-left: 10%;
+		height: 4px;
+		@include transition(all 0.3s ease-in-out);
+		background-color: $color-grey;
+}
 
 	ul {
 		li:first-child {
@@ -407,6 +509,9 @@ footer {
 			font-size: em(24);
 			margin-bottom: 40px;
 			color: $color-blue;
+			border-bottom: 2px solid $color-grey;
+			padding-bottom: 5px;
+			position: relative;
 		}
 
 		li {
@@ -435,6 +540,18 @@ footer {
 		}
 	}
 }
+
+		li:first-child:after {
+		position: absolute;
+		bottom: -10px;
+		left: 0;
+		content: "";
+		width: 80%;
+		margin-left: 10%;
+		height: 4px;
+		@include transition(all 0.3s ease-in-out);
+		background-color: $color-grey;
+		}
 
 .sub-a {
 	color: white;
@@ -492,8 +609,8 @@ footer {
 		top: -50px;
 		left: 0;
 		content: "";
-		width: 45%;
-		margin-left: 27.5%;
+		width: 35%;
+		margin-left: 32.5%;
 		height: 6px;
 		background-color: $color-grey;
 	}
@@ -503,8 +620,8 @@ footer {
 		bottom: -48px;
 		left: 0;
 		content: "";
-		width: 45%;
-		margin-left: 27.5%;
+		width: 35%;
+		margin-left: 32.5%;
 		height: 6px;
 		background-color: $color-grey;
 	}
@@ -514,8 +631,8 @@ footer {
 		top: -30px;
 		left: 0;
 		content: "";
-		width: 52%;
-		margin-left: 24%;
+		width: 40%;
+		margin-left: 30%;
 		height: 2px;
 		background-color: $color-grey;
 	}
@@ -525,8 +642,8 @@ footer {
 		bottom: -30px;
 		left: 0;
 		content: "";
-		width: 52%;
-		margin-left: 24%;
+		width: 40%;
+		margin-left: 30%;
 		height: 2px;
 		background-color: $color-grey;
 	}
